--- a/index.html
+++ b/index.html
@@ -20,6 +20,25 @@ ctx.strokeStyle = '#BADA55';
 ctx.lineJoin = 'round';
 ctx.lineCap = 'round';
 
+let isDrawing = false;
+let lastX = 0;
+let lastY = 0;
+
+const draw = function(e){
+if(isDrawing) return null;
+  console.log(e);
+ctx.beginPath();
+ctx.moveTo(lastX, lastY);
+ctx.lineTo(e.offsetX, e.offsetX);
+ctx.stroke();
+[lastX,lastY] = [e.offsetX, e.offsetY];
+};
+
+canvas.addEventListener('mousemove', draw);
+canvas.addEventListener('mouseup',() => isDrawing = false);
+canvas.addEventListener('mousedown', () => isDrawing = true);
+canvas.addEventListener('mouseout',() => isDrawing = false);
+
 </script>
 
 </body>
