--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,39 +8,62 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
 </head>
+
 <body>
-<canvas id="draw" width="800" height="800"> </canvas>
+  <canvas id="draw" width="800" height="800"> </canvas>
 
-<script>
+  <script>
+    const canvas = document.querySelector('#draw');
+    const ctx = canvas.getContext('2d');
+    canvas.width = window.innerWidth;
+    canvas.height = window.innerHeight;
+    ctx.strokeStyle = '#BADA55';
+    ctx.lineJoin = 'round';
+    ctx.lineCap = 'round';
+    ctx.lineWidth = 100;
+    let isDrawing = false;
+    let lastX = 0;
+    let lastY = 0;
+    let hue = 0;
+    let direction = false;
 
-const canvas = document.querySelector('#draw');
-const ctx = canvas.getContext('2d');
-canvas.width = window.innerWidth;
-canvas.height = window.innerHeight;
-ctx.strokeStyle = '#BADA55';
-ctx.lineJoin = 'round';
-ctx.lineCap = 'round';
+    const draw = function (e) {
+      if (!isDrawing) return null;
+      console.log(e);
+      ctx.lineWidth = hue;
+      ctx.strokeStyle = `hsl(${hue},100%, 50%)`;
+      ctx.beginPath();
+      ctx.moveTo(lastX, lastY);
+      ctx.lineTo(e.offsetX, e.offsetY);
+      ctx.stroke();
+      lastX = e.offsetX;
+      lastY = e.offsetY;
+      hue++;
+      if (hue >= 360) {
+        hue = 0;
+      };
+      if (ctx.lineWidth >= 100 || ctx.lineWidth <= 1) {
+        direction = !direction;
+      };
+      if (direction) {
+        ctx.lineWidth++;
+      } else {
+        ctx.lineWidth--;
+      }
+      lastX = e.offsetX;
+      lastY = e.offsetY;
+    };
 
-let isDrawing = false;
-let lastX = 0;
-let lastY = 0;
-
-const draw = function(e){
-if(isDrawing) return null;
-  console.log(e);
-ctx.beginPath();
-ctx.moveTo(lastX, lastY);
-ctx.lineTo(e.offsetX, e.offsetX);
-ctx.stroke();
-[lastX,lastY] = [e.offsetX, e.offsetY];
-};
-
-canvas.addEventListener('mousemove', draw);
-canvas.addEventListener('mouseup',() => isDrawing = false);
-canvas.addEventListener('mousedown', () => isDrawing = true);
-canvas.addEventListener('mouseout',() => isDrawing = false);
-
-</script>
+    canvas.addEventListener('mousemove', draw);
+    canvas.addEventListener('mouseup', () => isDrawing = false);
+    canvas.addEventListener('mousedown', (e) => {
+      isDrawing = true;
+      lastX = e.offsetX;
+      lastY = e.offsetY;
+    });
+    canvas.addEventListener('mouseout', () => isDrawing = false);
+  </script>
 
 </body>
+
 </html>
